# Upstox_GTT

./: .dockerignore  .env.example  .gitignore  AWS_DEPLOYMENT.md  CLIENT_SIGNAL_GUIDE.md  Dockerfile  README.md  app.py  db.py  docker-compose.aws.yml  entity_finder.py  fetch_today_signals.py  fix_signal5.py  gtt_strategy.py  latency.py  price_monitor.py  requirements.txt  run.sh  settings.py  telegram_ai_listener.py  test_signal.py  upstox_order_tracker.py
gtt_v2/: .env.example  .gitignore  app.py  deploy.sh  docker-compose.yml  pyproject.toml  sync-env.sh
gtt_v2/ParseerWithAI/: __init__.py  ai_signal_parser.py
gtt_v2/docs/: CLIENT_GUIDE.md  STATEMENT_OF_WORK.md
gtt_v2/services/admin_api/: Dockerfile  main.py  requirements.txt
gtt_v2/services/order_tracker/: Dockerfile  main.py  requirements.txt
gtt_v2/services/price_monitor/: Dockerfile  main.py  requirements.txt
gtt_v2/services/signal_ingestor/: Dockerfile  main.py  requirements.txt  telegram_listener.py
gtt_v2/services/trading_engine/: Dockerfile  main.py  requirements.txt
gtt_v2/shared/: config.py  heartbeat.py
gtt_v2/shared/db/: daily_pnl.py  gtt_rules.py  order_updates.py  postgres.py  signals.py  writer.py
gtt_v2/shared/instruments/: cache.py  loader.py
gtt_v2/shared/redis/: client.py  pipeline_log.py  rate_limiter.py
gtt_v2/shared/rules/: buffer.py  lot_splitter.py  missed_entry.py  pnl_guard.py  timing.py  trade_type.py
gtt_v2/shared/signal/: expiry.py  parser.py  types.py
gtt_v2/shared/upstox/: client.py  gtt_builder.py  market_ws.py  portfolio_ws.py
tests/: conftest.py  (+4 more)
(+22 files in other folders)
